2005-06-18  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (WIN32_BOOTSTRAP_LIBS): Use bootstrap library for
	libemisdwidgets. Code here uses e_utf8_to_locale_string() from
	libemiscwidgets which hasn't been built yet if building from
	scratch.
	(GAL_IMAGESDIR): Remove, unused leftover.
	(EVOLUTION_GLADEDIR): Add.
	(libeutil_la_LDFLAGS, libeconduit_la_LDFLAGS): Use NO_UNDEFINED.
	(libeutil_la_LIBADD, libeconduit_la_LIBADD): Link with necessary
	libs.

	* e-win32-reloc.c: Update now that it is here in evolution. Use _e
	prefix instead of _gal. Add getters for more run-time paths.

	* e-util-private.h: Corresponding changes.

2005-06-08  Srinivasa Ragavan <sragavan@novell.com>
	* e-cursor.[ch]: Added functions to show busy cursor.
	* Makefile.am: Add the files

2005-05-25  Not Zed  <NotZed@Ximian.com>

	* e-plugin-mono.[ch]: Removed, these are now implemented as a
	plugin.

	* e-plugin.c (ep_load_plugin): separate out plugin xml loading
	code from the loading loop.  If a plugin type doesn't exist, then
	save it in a list for later checking.
	(ep_load): call above to do the work.
	(e_plugin_register_type): check the pending doc list, if any
	plugins now have a type, load them.
	(e_plugin_type_hook_get_type): a plugin hook for registering new
	plugin types ('loaders') at runtime.

2005-05-19  Not Zed  <NotZed@Ximian.com>

	* e-import.[ch]: Initial, and un-finished work on importer plugin
	hooks.

2005-05-16  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: added e-error.[ch], removed e-error-tool, and added
	e-system.error.xml

2005-05-13  Not Zed  <NotZed@Ximian.com>

	* e-popup.c (emph_popup_factory): if we have a factory method
	supplied, call that as well.  More flexible popup building.
	(emph_construct_menu): load factory def.

2005-05-03  Not Zed  <NotZed@Ximian.com>

	* e-profile-event.c (e_profile_event_emit): undefine
	e_profile_event_emit if we are compiled without profiling.  The
	'abi' is not, nor was ever changed.
