@@ -36,6 +36,7 @@ static const char *localedir = NULL;
 
 /* The others are in UTF-8 */
 static const char *gladedir;
+static const char *helpdir;
 static const char *images;
 static const char *iconsdir;
 static const char *category_icons;
@@ -96,6 +97,7 @@ setup (void)
         g_free (cp_prefix);
 
         gladedir = replace_prefix (full_prefix, EVOLUTION_GLADEDIR);
+        helpdir = replace_prefix (full_prefix, EVOLUTION_HELPDIR);
         images = replace_prefix (full_prefix, EVOLUTION_IMAGES);
 	category_icons = replace_prefix (full_prefix, EVOLUTION_CATEGORY_ICONS);
 	plugindir = replace_prefix (full_prefix, EVOLUTION_PLUGINDIR);
@@ -117,6 +119,7 @@ _e_get_##varbl (void)				\
 
 GETTER(localedir)
 GETTER(gladedir)
+GETTER(helpdir)
 GETTER(images)
 GETTER(iconsdir)
 GETTER(category_icons)
